// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Emp 作れる 1`] = `
<div
  className="piece"
  onClick={[Function]}
/>
`;

exports[`NotPromote 作れる 1`] = `
<div
  className="confirm-button"
  id="cbtn-not-promote"
  onClick={[Function]}
/>
`;

exports[`Promote 作れる 1`] = `
<div
  className="confirm-button"
  id="cbtn-promote"
  onClick={[Function]}
/>
`;

exports[`PromotionConfirm 作れる 1`] = `
<div
  className="piece"
>
  <div
    className="confirm-button"
    id="cbtn-promote"
    onClick={[Function]}
  />
  <div
    className="confirm-button"
    id="cbtn-not-promote"
    onClick={[Function]}
  />
</div>
`;
